# readest

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HARDCOVER_SYNC_CHANGES.md  KOKORO_TTS_INTEGRATION.md  PROJECT.md  PR_DESCRIPTION.md  README.md  RSS_IMPLEMENTATION.md  SESSION_NOTES_2026-03-29.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: android-apk.yml  android-arm64.yml  android-e2e.yml  codeql.yml  create-package.yml  docker-image.yml  nightly.yml  pull-request.yml  release.yml  upload-to-r2.yml  vercel-merge.yml
Agents/: AUDIT_LOG.md  DESIGN_HANDOFF_NOTES.md  DEVELOPMENT_RULES.md  LEGACY_ELECTRON_AUDIT_LOG.md  MASTER_PLAN.md  STARTING_PROMPTS.md  TASK_QUEUE.md
Agents/handoff/: asset-list.md  citadel-snippets.html  citadel_app_icon.icns  fantasy-mode.css
apps/readest-app/: .env  .env.tauri  .gitignore  AGENTS.md  DESIGN.md  TODOS.md  eslint.config.mjs  i18n-langs.json  i18next-scanner.config.cjs  i18next-scanner.config.js  next.config.mjs  open-next.config.ts  package.json  playwright.config.ts  release-notes.json  tailwind.config.ts  tsconfig.json  vitest.browser.config.mts  vitest.setup.ts  wrangler.toml
apps/readest-app/docs/: epub-open-perf.md  inline-insight.md  inline-insight.zh-cn.md  smart-ask.md  testing.md
apps/readest-app/e2e/: README.md  rsvp.spec.ts
apps/readest-app/public/: manifest.json
apps/readest-calibre-plugin/: Makefile  README.md  __init__.py  api.py  config.py  dialogs.py  oauth.py  ui.py  wire.py  worker.py
apps/readest.koplugin/: main.lua  readest_syncstats.lua  syncannotations.lua
data/metainfo/: appdata.xml  appdata.xml.sha256  com.bilingify.readest.appdata.xml  com.bilingify.readest.appdata.xml.sha256  com.bilingify.readest.yml
docker/: .env.example  README.md  compose.yaml
docs/: AGENT_OWNERSHIP.md  CITADEL_AGENT_UI_RULES.md  CITADEL_ARCHITECTURE_AUDIT.md  CITADEL_SETTINGS_AUDIT.md  CITADEL_UX_SIMPLIFICATION_PLAN.md  CURRENT_SPRINT.md  DEBUG_HELPERS.md  READER_UI_ANATOMY.md  READER_UI_HARNESS.md  VALIDATION_CHECKLISTS.md
notes/: ROADMAP.md  SESSION_NOTES_2026-03-29_SESSION2.md  SESSION_NOTES_2026-03-29_SESSION3.md  SESSION_NOTES_2026-03-30_SESSION4.md  SESSION_NOTES_2026-03-30_SESSION5.md  SESSION_NOTES_2026-03-30_SESSION6.md  SESSION_NOTES_2026-03-30_SESSION7.md  SESSION_NOTES_2026-03-30_SESSION8.md
ops/: flake.nix
pages for reference/: Library Genesis.html
patches/: @ai-sdk__provider-utils@4.0.8.patch  @assistant-ui__react.patch  openai@6.14.0.patch  react-roving-tabindex-2.patch
volumes/api/: kong.yml
(+1036 files in other folders)
